[workspace]
resolver = "2"
members = [
  "tokio",
]

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[patch.crates-io]
async-usercalls = { git = "https://github.com/quidmints/rust-sgx", branch = "main" }
# enclave-runner = { git = "https://github.com/quidmints/rust-sgx", branch = "main" }
# sgx-isa = { git = "https://github.com/fortanix/rust-sgx", branch = "main" }
# sgxs = { git = "https://github.com/fortanix/rust-sgx", branch = "main" }
# tokio = { path = "./tokio" }
